--- a/package.json
+++ b/package.json
@@ -6,19 +6,34 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "run-p --continue-on-error --print-label lint:*",
+    "lint:eslint": "next lint",
+    "lint:prettier": "prettier --cache --check .",
+    "lint:secretlint": "secretlint --maskSecrets **",
+    "fix:eslint": "eslint --color --fix .",
+    "fix:prettier": "prettier --cache --write .",
+    "fix": "run-s --continue-on-error fix:*"
   },
   "dependencies": {
+    "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18",
-    "next": "13.5.4"
+    "react-dom": "^18"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@secretlint/secretlint-rule-preset-recommend": "7.0.7",
+    "@tksst/prettier-config": "1.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "better-typescript-lib": "2.5.0",
     "eslint": "^8",
-    "eslint-config-next": "13.5.4"
-  }
+    "eslint-config-next": "13.5.4",
+    "eslint-config-prettier": "9.0.0",
+    "eslint-plugin-simple-import-sort": "10.0.0",
+    "npm-run-all": "4.1.5",
+    "prettier": "3.0.3",
+    "secretlint": "7.0.7",
+    "typescript": "^5"
+  },
+  "packageManager": "pnpm@8.8.0"
 }
