--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "dependencies": {
     "next": "13.5.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "streamsaver": "2.0.6"
   },
   "devDependencies": {
     "@secretlint/secretlint-rule-preset-recommend": "7.0.7",
@@ -25,6 +26,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/streamsaver": "2.0.2",
     "better-typescript-lib": "2.5.0",
     "eslint": "^8",
     "eslint-config-next": "13.5.4",
